# project-RETRO

./: .gitignore  README.md  pyproject.toml
.github/workflows/: style-check.yml
retro_pytorch/: data.py  data_for_test.py  dataloaders.py  lightning_setup.py  optimizer.py  retrieval.py  retro_pytorch.py  train_functions.py  training.py  utils.py
scripts/: config.yaml  config_dev.yaml  create_chunks.py  create_project_doc_dict.py  create_project_indices.py  create_split_map.py  make_random_retrive.py  test_docs_split.py  test_retrieve.py  test_retrieve_error_rate.py  train.py  train_concat.py  train_no_retrieve.py  validate.py  validate_dev.py
tests/: config.yaml  config_dev.yaml  test_chunks.py  test_embed.py  test_pipeline_emb.py  test_retrieve.py  test_search_index.py
